# bikeshare-analytics

./: .dockerignore  .gitignore  .process.md  Dockerfile  LICENSE  README.md  README_FULL.md  README_SUBMISSION.md  deploy.sh  docker-compose.yml  env.example  pyproject.toml  requirements.txt  streamlit_app.py
src/: app_init.py  db.py  intent_utils.py  logging_config.py  main.py  main_simple.py  semantic_mapper.py  sql_generator.py
tests/: test_api_contract.py  test_basic_structure.py  test_ground_truth_queries.py  test_nl_query_accuracy.py  test_nl_query_accuracy_async.py  test_public_acceptance.py  test_semantic_mapper.py  test_sql_generator.py  test_value_resolution.py
